--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
         buildConfigField "String", "BASE_URL", '"https://api.themoviedb.org/"'
         buildConfigField "String", "TMDB_API_KEY", '"23c5a2a158ff18bdfb3a0a400df2da61"'
         buildConfigField "String", "POSTER_MOVIE_URL", '"https://image.tmdb.org/t/p/w185"'
+        buildConfigField "String", "GOOGLE_API_KEY", '"AIzaSyDKTrvtNt8bQp77BZTqfl8442BqKs7tui0"'
     }
     buildTypes {
         release {
@@ -23,6 +24,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+androidExtensions {
+    experimental = true
 }
 
 dependencies {
@@ -45,4 +50,6 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 }
