--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,9 +14,9 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "BASE_URL", '"https://api.themoviedb.org/"'
-        buildConfigField "String", "TMDB_API_KEY", '"23c5a2a158ff18bdfb3a0a400df2da61"'
+        buildConfigField "String", "TMDB_API_KEY", '""'
         buildConfigField "String", "POSTER_MOVIE_URL", '"https://image.tmdb.org/t/p/w185"'
-        buildConfigField "String", "GOOGLE_API_KEY", '"AIzaSyDKTrvtNt8bQp77BZTqfl8442BqKs7tui0"'
+        buildConfigField "String", "GOOGLE_API_KEY", '""'
     }
     buildTypes {
         release {
